# rust-api

./: .env.example  Cargo.toml  README.md
migrations/2020-06-07-015534_create_users_table/: up.sql
src/: db.rs  errors.rs  main.rs  schema.rs
src/auth/: handler.rs  mod.rs  route.rs
src/user/: handler.rs  mod.rs  model.rs  route.rs
