[package]
name = "rust-api"
version = "0.1.0"
authors = ["dansoy <dansoy@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-redis = { version = "0.8", features = ["web"] }
actix-rt = "1.0"
actix-session = "0.3"
actix-web = "2.0.0"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99.2"
diesel = { version = "1.4.4", features = ["r2d2","mysql", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
env_logger ="0.7.1"
lazy_static = "1.4.0"
log = "0.4"
rand = "0.7"
rust-argon2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }